[package]
name = "aleph-alpha-rag-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleph-alpha-client = "0.7.1"
anyhow = "1.0.77"
qdrant-client = "1.7.0"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tonic = "0.10.2"
